--- a/_config.yml
+++ b/_config.yml
@@ -83,11 +83,11 @@ author:
   name             : "Shaoshuai Chu"
   avatar           : "profile.png"
   bio              : "Computational Mathematics"
-  location         : "Southern University of Science and Technology, Shenzhen, China"
-  employer         :
+  location         : "Shenzhen, China"
+  employer         : 
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=CumyZ2QAAAAJ&hl=zh-CN"
-  email            :
+  email            : "chuss@mail.sustech.edu.cn"
   researchgate     : "https://www.researchgate.net/profile/Chu-Shaoshuai-2"
   uri              :
   bitbucket        :
@@ -96,7 +96,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "academicpages"
+  github           : #"academicpages"
   google_plus      :
   keybase          :
   instagram        :
