--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Shaoshuai's Homepage"
 title_separator          : "-"
 name                     : &name "Shaoshuai Chu"
 description              : &description "personal description"
-url                      : https://shaoshuai.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Shaoshuai Chu"
-  avatar           : "profile2.png"
+  avatar           : "profile.png"
   bio              : "Computational Mathematics"
   location         : "Shenzhen, China"
   employer         : 
@@ -235,7 +235,7 @@ defaults:
       layout: single
       author_profile: false
       share: false
-      comment: false
+      comment: true
   # _talks
   - scope:
       path: ""
