--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ author:
   avatar           : "profile.png"
   bio              : "Computational Mathematics"
   location         : "Shenzhen, China"
-  employer         : "Southern University of Science and Technology"
+  employer         : "SUSTech"
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=CumyZ2QAAAAJ&hl=zh-CN"
   email            : "chuss@mail.sustech.edu.cn"
