--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Shaoshuai Chu"
-  avatar           : "profile.png"
+  avatar           : "profile2.png"
   bio              : "Computational Mathematics"
   location         : "Shenzhen, China"
   employer         : "SUSTech"
