--- a/_config.yml
+++ b/_config.yml
@@ -81,10 +81,10 @@ analytics:
 # Site Author
 author:
   name             : "Shaoshuai Chu"
-  avatar           : "profile2.png"
+  avatar           : "profile.png"
   bio              : "Computational Mathematics"
-  location         : "Shenzhen, China"
-  employer         : "SUSTech"
+  location         : "SUSTech, Shenzhen, China"
+  employer         : 
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=CumyZ2QAAAAJ&hl=zh-CN"
   email            : "chuss@mail.sustech.edu.cn"
