--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,8 @@
 # main links links
 main:
   - title: "Publications"
-    url: /publications/
+  # url: /cv/
+    url: /files/Chushaoshuai_CV.pdf/
 
   #- title: "Talks"
   #  url: /talks/    
