--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,7 +2,7 @@
 main:
   - title: "Publications"
   # url: /cv/
-    url: /files/Chushaoshuai_CV.pdf/
+    url: /files/Chushaoshuai_CV.pdf
 
   #- title: "Talks"
   #  url: /talks/    
