--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,8 +1,8 @@
 # main links links
 main:
   - title: "Publications"
-  # url: /cv/
-    url: /files/Chushaoshuai_CV.pdf
+   url: /publications/
+    
 
   #- title: "Talks"
   #  url: /talks/    
@@ -17,7 +17,8 @@ main:
   #  url: /year-archive/
     
   - title: "CV"
-    url: /cv/
+  #  url: /cv/
+     url: /files/Chushaoshuai_CV.pdf
     
   #- title: "Guide"
   #  url: /markdown/
