--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -17,8 +17,8 @@ main:
   #  url: /year-archive/
     
   - title: "CV"
-  #  url: /cv/
-     url: /files/Chushaoshuai_CV.pdf
+    url: /cv/
+  #   url: /files/Chushaoshuai_CV.pdf
     
   #- title: "Guide"
   #  url: /markdown/
