--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,8 +1,8 @@
 # main links links
 main:
   - title: "Publications"
-   url: /publication/
-    
+  # url: /cv/
+    url: /files/Chushaoshuai_CV.pdf
 
   #- title: "Talks"
   #  url: /talks/    
@@ -18,7 +18,6 @@ main:
     
   - title: "CV"
     url: /cv/
-  #   url: /files/Chushaoshuai_CV.pdf
     
   #- title: "Guide"
   #  url: /markdown/
