--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,8 +1,8 @@
 # main links links
 main:
-  - title: "Publications"
+  #- title: "Publications"
   #   url: https://scholar.google.com/citations?user=CumyZ2QAAAAJ&hl=zh-CN
-    url: /publications/
+  #   url: /publications/
 
   #- title: "Talks"
   #  url: /talks/    
