--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -17,7 +17,7 @@ main:
   #  url: /year-archive/
     
   - title: "CV"
-    url: /files/Chushaoshuai_CV.pdf
+    url: /files/paper1.pdf
   #  url: /cv/
     
   #- title: "Guide"
