--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -13,7 +13,7 @@ main:
   #- title: "Blog Posts"
   #  url: /year-archive/
     
-  - title: "CV"
+  - title: "<font color=blue>CV</font>"
     url: /files/paper4.pdf
   
   - title: "Teaching"
