--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -13,7 +13,8 @@ main:
   #- title: "Blog Posts"
   #  url: /year-archive/
     
-  - title: "<font color=blue>CV</font>"
+  #- title: "<font color=blue>CV</font>"
+  - title: "CV"
     url: /files/paper4.pdf
   
   #- title: "Teaching"
