--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Shaoshuai Chu"
   avatar           : "profile2.png"
   bio              : "Computational Mathematics"
-  location         : "[SUSTech, Shenzhen, China](https://academicpages.github.io/cv)"
+  location         : "<a href="mailto:contact@example.com">SUSTech, Shenzhen, China</a>"
   employer         : 
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=CumyZ2QAAAAJ&hl=zh-CN"
