--- a/_config.yml
+++ b/_config.yml
@@ -180,7 +180,7 @@ collections:
     permalink: /:collection/:path/
   publications:
     output: false
-    permalink: /:collection/:path/
+  #  permalink: /:collection/:path/
   portfolio:
     output: false
     permalink: /:collection/:path/
