--- a/_config.yml
+++ b/_config.yml
@@ -180,7 +180,7 @@ collections:
     permalink: /:collection/:path/
   publications:
     output: false
-  #  permalink: /:collection/:path/
+    permalink: /:collection/:path/
   portfolio:
     output: false
     permalink: /:collection/:path/
@@ -221,7 +221,8 @@ defaults:
   # _publications
   - scope:
       path: ""
-      type: publications
+      type: ""
+  #    type: publications
     values:
       layout: single
       author_profile: false
