--- a/_config.yml
+++ b/_config.yml
@@ -221,8 +221,7 @@ defaults:
   # _publications
   - scope:
       path: ""
-      type: ""
-  #    type: publications
+      type: publications
     values:
       layout: single
       author_profile: false
