--- a/_config.yml
+++ b/_config.yml
@@ -220,8 +220,8 @@ defaults:
       comments: false
   # _publications
   - scope:
-      path: ""
-  #    type: publications
+  #    path: 
+      type: publications
     values:
       layout: single
       author_profile: false
