--- a/_config.yml
+++ b/_config.yml
@@ -220,7 +220,7 @@ defaults:
       comments: false
   # _publications
   - scope:
-  #    path: 
+      path: ""
       type: publications
     values:
       layout: single
