--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -16,7 +16,7 @@ main:
     
   #- title: "<font color=blue>CV</font>"
   - title: "CV"
-    url: /files/paper4.pdf
+    url: /files/Chushaoshuai_CV.pdf
   
   #- title: "Teaching"
   #  url: /teaching/    
