--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         :
+  linkedin         : #
   orcid            : "https://orcid.org/my-orcid?orcid=0009-0005-8900-2866"
   pinterest        :
   soundcloud       :
