--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,8 @@
 # main links links
 main:
   - title: "Publications"
-    url: /publications/
+  #  url: /publications/
+    url: /files/Chushaoshuai_CV.pdf
   #  url: https://scholar.google.com/citations?user=CumyZ2QAAAAJ&hl=zh-CN
      
 
