--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links links
 main:
- - title: "Publications"
-    url: /files/List_Publications.pdf
+ #- title: "Publications"
+  #  url: /files/List_Publications.pdf
   #  url: /publications/
   #  url: https://scholar.google.com/citations?user=CumyZ2QAAAAJ&hl=zh-CN
      
