--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,7 +2,7 @@
 main:
  - title: "Publications"
   #  url: /files/List_Publications.pdf
-    url: /files/Chushaoshuai_CV.pdf
+    url: /files/paper1.pdf
   #  url: /publications/
   #  url: https://scholar.google.com/citations?user=CumyZ2QAAAAJ&hl=zh-CN
      
