--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,7 @@ main:
   #   url: /files/paper1.pdf
   #  url: /files/List_Publications.pdf
   #  url: /publications/
-    url: https://scholar.google.com/citations?user=CumyZ2QAAAAJ&hl=zh-CN
+  #  url: https://scholar.google.com/citations?user=CumyZ2QAAAAJ&hl=zh-CN
      
 
   #- title: "Talks"
