--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,6 @@
 # main links links
 main:
- - title: "Publications"
+  #- title: "Publications"
   #   url: /files/paper1.pdf
   #  url: /files/List_Publications.pdf
   #  url: /publications/
